# aiida-epw

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
dev/: update_changelog.py
docs/: conf.py  developer.md  index.md  myst.yml
examples/pipeline/: README.md  cli_bands.py  cli_bands_settings.yaml
scratch/: epw_parser_dev.py  epw_parser_diff.patch  epw_parser_diff.txt  test_parse_eliashberg.py
src/aiida_epw/: __init__.py
src/aiida_epw/calculations/: epw.py
src/aiida_epw/common/: __init__.py  types.py
src/aiida_epw/controllers/: __init__.py  epw_bands.py  prep.py
src/aiida_epw/data/: __init__.py  a2f.py  dos.py  gap_function.py  lambda_fs.py  lambda_k_pairs.py  projected_spectrum.py
src/aiida_epw/parsers/: epw.py  schemas.py
src/aiida_epw/tools/: __init__.py  band_analysis.py  calculators.py  kpoints.py  parsers.py  plot.py  workchain.py
src/aiida_epw/workflows/: base.py  epw.py  mobility.py  prep.py  supercon.py
src/aiida_epw/workflows/protocols/: base.yaml  base_mob.yaml  base_sc.yaml  epw.yaml  mobility.yaml  prep.yaml  prep_mob.yaml  prep_sc.yaml  supercon.yaml
src/aiida_epw/workgraphs/: __init__.py  prep.py  supercon.py
tests/: conftest.py
tests/calculations/: __init__.py  test_epw_calcjob.py
tests/data/: __init__.py  test_a2f.py  test_dos.py  test_gap_function.py  test_lambda_fs.py  test_lambda_k_pairs.py  test_projected_spectrum.py
tests/files/parsers/epw/anisotropic_eliashberg_fbw/: aiida.out
tests/files/parsers/epw/anisotropic_eliashberg_fsr/: aiida.out
tests/files/parsers/epw/bands/: aiida.out
tests/files/parsers/epw/default/: aiida.a2f  aiida.out
tests/files/parsers/epw/failed_broyden_factor/: aiida.out
tests/files/parsers/epw/failed_pade_approximation/: aiida.out
tests/files/parsers/epw/isotropic_eliashberg/: aiida.imag_iso_001.00  aiida.imag_iso_002.00  aiida.imag_iso_003.00  aiida.imag_iso_004.00  aiida.imag_iso_005.00  aiida.imag_iso_006.00  aiida.imag_iso_007.00  aiida.imag_iso_008.00  aiida.imag_iso_009.00  aiida.imag_iso_010.00  aiida.imag_iso_011.00  aiida.imag_iso_012.00  aiida.imag_iso_013.00  aiida.imag_iso_014.00  aiida.imag_iso_015.00  aiida.out
tests/files/tools/parsers/a2f/: aiida.a2f  aiida.a2f_proj  aiida.dos  aiida.phdos  aiida.phdos_proj
tests/files/tools/parsers/bands/: band.eig  phband.freq
tests/files/tools/parsers/fsr_aniso_eliashberg/: aiida.imag_aniso_gap0_003.00  aiida.imag_aniso_gap0_004.00  aiida.imag_aniso_gap0_005.00  aiida.imag_aniso_gap0_006.00  aiida.imag_aniso_gap0_007.00  aiida.imag_aniso_gap0_008.00
tests/files/tools/parsers/full_iso_eliashberg/: aiida.imag_iso_001.00  aiida.imag_iso_002.00  aiida.imag_iso_003.00  aiida.imag_iso_004.00  aiida.imag_iso_005.00  aiida.imag_iso_006.00  aiida.imag_iso_007.00  aiida.imag_iso_008.00  aiida.imag_iso_009.00  aiida.imag_iso_010.00  (+4 more)
tests/parsers/: __init__.py  test_epw.py
tests/parsers/test_epw/: test_epw_anisotropic_eliashberg_fbw_.yml  test_epw_anisotropic_eliashberg_fsr_.yml  test_epw_anisotropic_fbw_pade_.yml  test_epw_anisotropic_fsr_pade_.yml  test_epw_bands_.yml  test_epw_default_.yml  test_epw_failed_broyden_factor.yml  test_epw_failed_pade_approximation.yml  test_epw_isotropic_eliashberg_.yml  test_epw_isotropic_fbw_imag_.yml
tests/tools/: __init__.py  test_parsers.py  test_workchain.py
tests/tools/test_parsers/: test_parse_epw_a2f.yml  test_parse_epw_bands.yml  test_parse_epw_dos.yml  test_parse_epw_eldos.yml  test_parse_epw_imag_aniso_gap0.yml  test_parse_epw_imag_iso.yml  test_parse_epw_max_eigenvalue.yml  test_parse_epw_phdos.yml
tests/workflows/: test_base.py  test_prep.py  test_supercon.py
tests/workgraphs/: test_prep.py  test_supercon.py
(+57 files in other folders)
