[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aiida-epw"
dynamic = ["version"]
description = "AiiDA plugin package for interfacing with the Electron Phonon Wannier (EPW) code."
authors = [{name = "Marnik Bercx", email = "marnik.bercx@psi.ch"}]

readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 3 - Alpha",
    "Framework :: AiiDA"
]
keywords = ["aiida", "plugin"]
requires-python = ">=3.9"
dependencies = [
    "aiida-core~=2.5",
]

[project.urls]
Source = "https://github.com/aiidaplugins/aiida-epw"

[tool.flit.module]
name = "aiida_epw"
