[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiida-epw"
dynamic = ["version"]
description = "AiiDA plugin package for interfacing with the Electron Phonon Wannier (EPW) code."
authors = [{name = "Marnik Bercx", email = "marnik.bercx@psi.ch"}]
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiida-core~=2.5",
    "aiida-quantumespresso~=4.10",
    "aiida_wannier90_workflows",
    "numpy",
]

[project.urls]
Source = "https://github.com/aiidaplugins/aiida-epw"

[project.entry-points.'aiida.calculations']
'epw.epw' = 'aiida_epw.calculations.epw:EpwCalculation'

[project.entry-points.'aiida.parsers']
'epw.epw' = 'aiida_epw.parsers.epw:EpwParser'

[project.entry-points.'aiida.workflows']
'epw.base' = 'aiida_epw.workflows.base:EpwBaseWorkChain'
'epw.epw' = 'aiida_epw.workflows.epw:EpwWorkChain'
'epw.supercon' = 'aiida_epw.workflows.supercon:SuperConWorkChain'

[tool.hatch.version]
path = "src/aiida_epw/__about__.py"

[tool.hatch.envs.docs]
dependencies = [
  "mystmd"
]
scripts.build = "cd docs && myst build"
scripts.serve = "cd docs && myst start"

[tool.hatch.envs.precommit]
dependencies = ["pre-commit"]
scripts.install = "pre-commit install"
scripts.run = "pre-commit run {args:--all-files}"
